--- a/index.html
+++ b/index.html
@@ -2,21 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/WEB3.0/assets/favicon.17e50649.svg"
-    />
+    <link rel="icon" type="image/svg+xml" href="/WEB3.0/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Krypt</title>
-    <script
-      type="module"
-      crossorigin
-      src="/WEB3.0/assets/index.8221e16e.js"
-    ></script>
-    <link rel="stylesheet" href="/WEB3.0/assets/index.f6e67af5.css" />
+    <title>Vite App</title>
+    <script type="module" crossorigin src="/WEB3.0/assets/index.8221e16e.js"></script>
+    <link rel="stylesheet" href="/WEB3.0/assets/index.f6e67af5.css">
   </head>
   <body>
     <div id="root"></div>
+    
   </body>
 </html>
